# LiftOn

./: .gitattributes  .gitignore  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  LICENSE  MANIFEST.in  Makefile  README.md  RUN_LIFTON.sh  RUN_LIFTON_Homo_sapien_MANE.sh  RUN_LIFTON_Homo_sapien_RefSeq.sh  RUN_LIFTON_Homo_sapien_TEST.sh  RUN_LIFTON_Mus_musculus.sh  RUN_LIFTON_mouse.sh  RUN_LIFTON_yeast_TEST.sh  build_spec_html.py  conftest.py  features.txt  lifton-local.def  lifton.def  lifton.yml  lifton_technical_spec.md  pyproject.toml  setup.py  test_create_db.py  unmapped_features.txt
.github/: dependabot.yml
benchmarks/: README.md  REPRODUCE.md  datasets.json  fetch_tiered.py  human_subset.chroms  phase16_rerun_bee.sh  phase17_human_subset.sh  phase17_rerun.sh  register_tiers.py  run_benchmarks.py  run_benchmarks.sh  run_maize_salvage.sh  run_tiers_4way.sh  run_tiers_full.sh  tier_expansion.md  tiers.json
comparison/: compare.ipynb  results  results_old
dictionary/: dict(old).py  dict.py  result.out
docs/: README.md
experiments/: RUN_CHM13_MANE.sh  RUN_CHM13_MANE_assembly.sh  RUN_CHM13_RefSeq.sh  RUN_Mus_musculus_MANE.sh  RUN_chm13_vs_lifton.sh  Step_1_gffread_get_liftoff_protein.py  extract_mutated_transcripts.sh
intermediate_files/: reference_all_genes.fa  reference_all_to_target_all.sam
lifton/: __init__.py  adjust_cds_boundaries.py  align.py  annotation.py  annotation_validator.py  coreutils.py  evaluation.py  exceptions.py  extra_copy.py  extract_features.py  extract_sequence.py  fix_trans_annotation.py  get_id_fraction.py  gff3_validator.py  gffbase_adapter.py  intervals.py  lifton.py  lifton_class.py  lifton_class_eval.py  (+17 more)
lifton/gffbase/_rust/: Cargo.toml
lifton/gffbase/_rust/src/: attributes.rs  dialect.rs  escape.rs  lib.rs  parser.rs  validate.rs
(+615 files in other folders)
